Update to alpine:latest (has php81)

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -1,12 +1,12 @@
-FROM alpine:3.16
+FROM alpine:latest
 RUN apk --no-cache add bash
-RUN apk --no-cache add --repository http://dl-cdn.alpinelinux.org/alpine/v3.16/community/ tini
+RUN apk --no-cache add --repository http://dl-cdn.alpinelinux.org/alpine/latest-stable/community/ tini
 
 # install runtime dependencies into rootfs
 ENV rootfs=/var/tmp/docker-phan-rootfs-XXXXXXXXXX
 ENV mirror=http://nl.alpinelinux.org/alpine
 # configure rootfs
-RUN mkdir -p $rootfs/etc/apk && { echo "$mirror/v3.16/main"; echo "$mirror/v3.16/community"; } | tee "/etc/apk/repositories" "$rootfs/etc/apk/repositories" >&2
+RUN mkdir -p $rootfs/etc/apk && { echo "$mirror/latest-stable/main"; echo "$mirror/latest-stable/community"; } | tee "/etc/apk/repositories" "$rootfs/etc/apk/repositories" >&2
 
 # install PHP8 dependencies and build dependencies
 RUN apk --no-cache add php php-sqlite3 php-mbstring curl php-openssl php-phar php-dom php-pcntl php-tokenizer php-iconv
@@ -16,7 +16,7 @@ RUN cd /tmp && \
     mv composer.phar /usr/local/bin
 
 # Use the ast versions provided by alpine
-RUN apk --no-cache --root "/var/tmp/docker-phan-rootfs-XXXXXXXXXX" --keys-dir /etc/apk/keys add --initdb php php-json php-sqlite3 php-mbstring php-pcntl php-dom php-tokenizer php-iconv php8-pecl-ast tini
+RUN apk --no-cache --root "/var/tmp/docker-phan-rootfs-XXXXXXXXXX" --keys-dir /etc/apk/keys add --initdb php php-json php-sqlite3 php-mbstring php-pcntl php-dom php-tokenizer php-iconv php81-pecl-ast tini
 
 # TODO: Merge into above for downloading phan releases (could use github api instead)
 RUN apk --no-cache add git
